chore: created config builder

--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
         "lint:fix": "biome check --write .",
         "check": "bun run typecheck && bun run lint"
     },
+    "dependencies": {
+        "@ts-types/deep-partial": "^0.0.1",
+        "pino": "^10.1.0",
+        "ts-deepmerge": "^7.0.3",
+        "zod": "^4.1.12"
+    },
     "devDependencies": {
         "@biomejs/biome": "^2.3.5",
         "@commitlint/cli": "^20.1.0",
@@ -41,8 +47,5 @@
     },
     "peerDependencies": {
         "typescript": "^5.9.3"
-    },
-    "dependencies": {
-        "pino": "^10.1.0"
     }
 }
