feat: added project utils

--- a/package.json
+++ b/package.json
@@ -36,9 +36,13 @@
         "docker:logs": "docker compose -f docker/docker-compose.dev.yml logs -f"
     },
     "dependencies": {
+        "@keyvhq/core": "^2.1.11",
+        "@keyvhq/redis": "^2.1.11",
+        "@keyvhq/sqlite": "^2.1.11",
         "@ts-types/deep-partial": "^0.0.1",
         "pino": "^10.1.0",
         "ts-deepmerge": "^7.0.3",
+        "tsyringe": "^4.10.0",
         "zod": "^4.1.12"
     },
     "devDependencies": {
