--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - "5432:5432"
+      - "4432:5432"
     volumes:
       - gee-mailer-dev-postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -21,14 +21,14 @@ services:
     image: getmeili/meilisearch:v1.11
     container_name: gmail-intelligence-search
     ports:
-      - "7700:7700"
+      - "4700:7700"
     volumes:
       - gee-mailer-dev-meilisearch_data:/meili_data
     environment:
       MEILI_ENV: development
       MEILI_NO_ANALYTICS: true
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:7700/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:4700/health"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -38,20 +38,35 @@ services:
     container_name: gmail-intelligence-storage
     command: server /data --console-address ":9001"
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "4900:9000"
+      - "4901:9001"
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
     volumes:
       - gee-mailer-dev-minio_data:/data
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: ["CMD", "curl", "-f", "http://localhost:4900/minio/health/live"]
       interval: 10s
       timeout: 5s
       retries: 5
+
+  redis:
+    image: valkey/valkey:9.0-alpine3.22
+    ports:
+      - "4379:6379"
+    volumes:
+      - gee-mailer-dev-redis_data:/data
+    healthcheck:
+      test: [ "CMD", "valkey-cli", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+    command: valkey-server --appendonly yes
 
 volumes:
   gee-mailer-dev-postgres_data:
   gee-mailer-dev-meilisearch_data:
   gee-mailer-dev-minio_data:
+  gee-mailer-dev-redis_data:
