--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 LOGGER_LEVEL=info
 CACHE_URL=memory
+DATABASE_URL=postgres://postgres:postgres@localhost:4432/gmail_intelligence?synchronize=false&logging=true&timezone=Z&charset=utf8mb4&migrationsRun=false
