feat: established BullMQ config workflow

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "lint": "biome check .",
         "lint:fix": "biome check --write .",
         "check": "bun run typecheck && bun run lint",
+        "codegen:bullmq": "bun src/cli/bullmq-codeGen.ts",
         "user:auth": "bun src/cli/auth.ts",
         "user:sync": "bun src/cli/sync.ts",
         "docker:start": "docker compose -f docker/docker-compose.dev.yml up -d",
@@ -48,6 +49,8 @@
         "@keyvhq/sqlite": "^2.1.11",
         "@ts-types/deep-partial": "^0.0.1",
         "@types/open": "^6.2.1",
+        "bullmq": "^5.63.2",
+        "eta": "^4.4.1",
         "googleapis": "^166.0.0",
         "inflection": "^3.0.2",
         "open": "^11.0.0",
