feat: created workflow for starting workers

--- a/sample.env
+++ b/sample.env
@@ -4,3 +4,7 @@ CACHE_URL=memory
 DATABASE_URL=postgres://postgres:postgres@localhost:4432/gmail_intelligence?synchronize=false&logging=true&timezone=Z&charset=utf8mb4&migrationsRun=false
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+WORKER_ENABLED=true
+WORKER_SHUTDOWN_TIMEOUT=30000
+WORKER_HEALTH_CHECK_INTERVAL=30000
+WORKER_AUTO_RESTART=true
