--- a/package.json
+++ b/package.json
@@ -33,6 +33,16 @@
         "codegen:bullmq": "bun src/cli/bullmq-codeGen.ts",
         "user:auth": "bun src/cli/auth.ts",
         "user:sync": "bun src/cli/sync.ts",
+        "workers:start": "bun src/workers.ts",
+        "workers:dev": "bun --hot src/workers.ts",
+        "pm2:start": "pm2 start ecosystem.config.js",
+        "pm2:start:dev": "pm2 start ecosystem.config.js --env development",
+        "pm2:start:prod": "pm2 start ecosystem.config.js --env production",
+        "pm2:stop": "pm2 stop ecosystem.config.js",
+        "pm2:restart": "pm2 restart ecosystem.config.js",
+        "pm2:delete": "pm2 delete ecosystem.config.js",
+        "pm2:logs": "pm2 logs",
+        "pm2:status": "pm2 status",
         "docker:start": "docker compose -f docker/docker-compose.dev.yml up -d",
         "docker:stop": "docker compose -f docker/docker-compose.dev.yml down",
         "docker:clear": "docker compose -f docker/docker-compose.dev.yml down -v",
