--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
         "user:sync": "bun src/cli/sync.ts",
         "workers:start": "bun src/workers.ts",
         "workers:dev": "bun --hot src/workers.ts",
-        "pm2:start": "pm2 start ecosystem.config.js",
-        "pm2:start:dev": "pm2 start ecosystem.config.js --env development",
-        "pm2:start:prod": "pm2 start ecosystem.config.js --env production",
-        "pm2:stop": "pm2 stop ecosystem.config.js",
-        "pm2:restart": "pm2 restart ecosystem.config.js",
-        "pm2:delete": "pm2 delete ecosystem.config.js",
+        "pm2:start": "pm2 start ecosystem.config.cjs",
+        "pm2:start:dev": "pm2 start ecosystem.config.cjs --env development",
+        "pm2:start:prod": "pm2 start ecosystem.config.cjs --env production",
+        "pm2:stop": "pm2 stop ecosystem.config.cjs",
+        "pm2:restart": "pm2 restart ecosystem.config.cjs",
+        "pm2:delete": "pm2 delete ecosystem.config.cjs",
         "pm2:logs": "pm2 logs",
         "pm2:status": "pm2 status",
         "docker:start": "docker compose -f docker/docker-compose.dev.yml up -d",
@@ -66,6 +66,7 @@
         "open": "^11.0.0",
         "pg": "^8.16.3",
         "pino": "^10.1.0",
+        "pm2": "^6.0.13",
         "reflect-metadata": "^0.2.2",
         "ts-deepmerge": "^7.0.3",
         "tsyringe": "^4.10.0",
