--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,20 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Run security audit
-        run: bun audit
+        run: |
+          echo "🔍 Running security audit..."
+          # Ignore known low-risk vulnerabilities in transitive dependencies
+          bun audit \
+            --ignore=GHSA-5j98-mcp5-4vw2 \
+            --ignore=GHSA-mh29-5h37-fv8m \
+          || {
+            echo "❌ New security vulnerabilities found!"
+            echo "📋 Full audit results:"
+            bun audit
+            exit 1
+          }
+
+          echo "✅ No new security vulnerabilities (known transitive dep issues ignored)"
 
   dependency-review:
     name: Dependency Review
