--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "homepage": "https://github.com/angelxmoreno/gee-mailer#readme",
     "scripts": {
         "prepare": "bun lefthook install",
-        "postinstall": "bun run codegen:bullmq && bun run lint:fix",
-        "dev": "bun --hot src/index.ts",
-        "build": "tsc",
+        "dev": "bun run codegen:bullmq && biome check --write . && bun --hot src/index.ts",
+        "build": "bun run codegen:bullmq && biome check --write . && tsc",
         "test": "bun test",
-        "typecheck": "tsc --noEmit",
+        "typecheck": "bun run codegen:bullmq && biome check --write . && tsc --noEmit",
         "lint": "biome check .",
-        "lint:fix": "biome check --write .",
+        "lint:fix": "bun run codegen:bullmq && biome check --write .",
         "check": "bun run typecheck && bun run lint",
         "codegen:bullmq": "bun src/cli/bullmq-codegen.ts",
         "user:auth": "bun src/cli/auth.ts",
