--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "pino": "^10.1.0",
         "pm2": "^6.0.13",
         "reflect-metadata": "^0.2.2",
+        "tagged-keyv-wrapper": "^1.3.0",
         "ts-deepmerge": "^7.0.3",
         "tsyringe": "^4.10.0",
         "typeorm": "^0.3.27",
