ci: removed multiple calls to codegen and added the call to the ci

--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "homepage": "https://github.com/angelxmoreno/gee-mailer#readme",
     "scripts": {
         "prepare": "bun lefthook install",
-        "dev": "bun run codegen:bullmq && biome check --write . && bun --hot src/index.ts",
-        "build": "bun run codegen:bullmq && biome check --write . && tsc",
+        "dev": "bun --hot src/index.ts",
+        "build": "tsc",
         "test": "bun test",
-        "typecheck": "bun run codegen:bullmq && biome check --write . && tsc --noEmit",
+        "typecheck": "tsc --noEmit",
         "lint": "biome check .",
-        "lint:fix": "bun run codegen:bullmq && biome check --write .",
-        "check": "bun run typecheck && bun run lint",
-        "codegen:bullmq": "bun src/cli/bullmq-codegen.ts",
+        "lint:fix": "biome check --write .",
+        "check": "bun run lint:fix && bun run typecheck && bun run test",
+        "codegen:bullmq": "bun src/cli/bullmq-codegen.ts && bun run lint:fix",
         "user:auth": "bun src/cli/auth.ts",
         "user:sync": "bun src/cli/sync.ts",
         "workers:start": "bun src/workers.ts",
