--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,11 +33,14 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Run CodeGen
+        run: bun codegen:bullmq
+
       - name: Run type checking
-        run: bun run typecheck
+        run: bun typecheck
 
       - name: Run linting
-        run: bun run lint
+        run: bun lint
 
       - name: Run tests
         run: bun test
@@ -61,6 +64,9 @@ jobs:
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
+
+      - name: Run CodeGen
+        run: bun codegen:bullmq
 
       - name: Run security audit
         run: |
