--- a/sample.env
+++ b/sample.env
@@ -8,3 +8,5 @@ WORKER_ENABLED=true
 WORKER_SHUTDOWN_TIMEOUT=30000
 WORKER_HEALTH_CHECK_INTERVAL=30000
 WORKER_AUTO_RESTART=true
+# to generate a good secret `run bun -e "console.log(require('node:crypto').randomBytes(64).toString('base64'))"`
+TOKEN_ENCRYPTION_SECRET=
