feat: extended auth commands

--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
         "lint:fix": "biome check --write .",
         "check": "bun run lint:fix && bun run typecheck && bun run test",
         "codegen:bullmq": "bun src/cli/bullmq-codegen.ts && bun run lint:fix",
-        "user:auth": "bun src/cli/auth.ts",
+        "cli": "bun src/cli/index.ts",
+        "auth:login": "bun src/cli/index.ts auth login",
+        "auth:logout": "bun src/cli/index.ts auth logout",
+        "auth:status": "bun src/cli/index.ts auth status",
+        "auth:refresh": "bun src/cli/index.ts auth refresh",
         "user:sync": "bun src/cli/sync.ts",
         "workers:start": "bun src/workers.ts",
         "workers:dev": "bun --hot src/workers.ts",
