--- a/package.json
+++ b/package.json
@@ -57,35 +57,38 @@
         "migration:run": "bun --bun typeorm migration:run -d src/database/dataSource.ts",
         "migration:revert": "bun --bun typeorm migration:revert -d src/database/dataSource.ts"
     },
+    "overrides": {
+        "js-yaml": "^4.1.1"
+    },
     "dependencies": {
         "@keyvhq/core": "^2.1.11",
         "@keyvhq/redis": "^2.1.11",
         "@keyvhq/sqlite": "^2.1.11",
         "@ts-types/deep-partial": "^0.0.1",
         "@types/open": "^6.2.1",
-        "bullmq": "^5.63.2",
+        "bullmq": "^5.65.1",
         "eta": "^4.4.1",
         "googleapis": "^166.0.0",
         "inflection": "^3.0.2",
         "open": "^11.0.0",
         "pg": "^8.16.3",
         "pino": "^10.1.0",
-        "pm2": "^6.0.13",
+        "pm2": "^6.0.14",
         "reflect-metadata": "^0.2.2",
         "tagged-keyv-wrapper": "^1.3.0",
         "ts-deepmerge": "^7.0.3",
         "tsyringe": "^4.10.0",
-        "typeorm": "^0.3.27",
+        "typeorm": "^0.3.28",
         "typeorm-pino-logger": "^0.2.0",
-        "zod": "^4.1.12"
+        "zod": "^4.1.13"
     },
     "devDependencies": {
-        "@biomejs/biome": "^2.3.6",
+        "@biomejs/biome": "^2.3.8",
         "@commitlint/cli": "^20.1.0",
         "@commitlint/config-conventional": "^20.0.0",
-        "@types/bun": "^1.3.2",
-        "lefthook": "^2.0.4",
-        "pino-pretty": "^13.1.2"
+        "@types/bun": "^1.3.3",
+        "lefthook": "^2.0.7",
+        "pino-pretty": "^13.1.3"
     },
     "peerDependencies": {
         "typescript": "^5.9.3"
